ontol/ontol-compiler/test-cases/error/rel/domain_as_param2.on
use 'a' as a
use 'b' as b

rel {a} 'to'[]: b // ERROR subject must be a domain type// ERROR object must be a data type

//@ src_name=a
//@ src_name=b
